With long shared-to list, the note window ends up getting a horizontal scroll. Prevent it by setting the width of the list container div.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19589 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -993,6 +993,7 @@
 			margin-left: 70px;
 			font-size: 12px;
 			position: relative;
+			width: 525px;
 
 			.title{
 				font-size: 24px;
